boiler-plate Updated

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/images/favicon.svg"
+      href="/src/assets/images/GraminShaktifevicon.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BoilerPlate</title>
+    <title>BOILER-PLATE</title>
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+   
   </body>
 </html>
